5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1594_1800.log
== TEST (2019-03-27 07:10:07) 
-- CODE:
var a= (float(round(input("valor de a: "**2(.2)))))
-- ERROR:
File "XXXX", line 1
    var a= (float(round(input("valor de a: "**2(.2)))))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:10:47) 
-- CODE:
var a= (float(round(input("valor de a: "**2))))
-- ERROR:
File "XXXX", line 1
    var a= (float(round(input("valor de a: "**2))))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:11:05) 
-- CODE:
var a= (input(float(round("valor de a: "**2))))
-- ERROR:
File "XXXX", line 1
    var a= (input(float(round("valor de a: "**2))))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:12:09) 
-- CODE:
var a= (input(float(round("valor de a: ")**2)))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(float(round("valor de a: ")**2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:12:41) 
-- CODE:
var a= (input(float(round("valor de a: "**2))))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(float(round("valor de a: "**2))))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:12:54) 
-- CODE:
var a= (input(round("valor de a: "**2)))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(round("valor de a: "**2)))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:13:16) 
-- CODE:
var a= (input(round("valor de a: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(round("valor de a: ")))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:13:30) 
-- CODE:
var a= (input("valor de a: "))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:13:48) 
-- CODE:
var a= (input("valor de var a: "))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:14:32) 
-- CODE:
var a= (float(input("valor de var a: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (float(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:14:54) 
-- CODE:
var a= (float(input("valor de var a: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (float(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:15:31) 
-- CODE:
var a= (float(input(valor de var a: )))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (float(input(valor de var a: )))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:15:48) 
-- CODE:
var a= (float(input("valor de var a: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (float(input()))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:16:06) 
-- CODE:
var a= (input(float("valor de var a: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(float("valor de var a: ")))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:16:28) 
-- CODE:
var a= (input(float("valor de var a: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(float("valor de var a: ")))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:16:56) 
-- CODE:
var a= (input(float("digite o valor: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(float("digite o valor: ")))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:17:14) 
-- CODE:
var a= (input(float("digite o valor:2 ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a= (input(float("digite o valor:2 ")))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:17:24) 
-- CODE:
var a=(input(float("digite o valor:2 ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a=(input(float("digite o valor:2 ")))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:17:31) 
-- CODE:
var a=(input(float("digite o valor: ")))
print("var a")
-- ERROR:
File "XXXX", line 1
    var a=(input(float("digite o valor: ")))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:17:51) 
-- CODE:
var =(input(float("digite o valor: ")))
print("var a")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var =(input(float("digite o valor: ")))
ValueError: could not convert string to float: 'digite o valor: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:18:45) 
-- CODE:
varA=(float(input("digite o valor: ")))
print("var a")
-- OUTPUT:
var a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:19:16) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(varA**2)
-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:20:47) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(round(varA**2.7))

-- OUTPUT:
3257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:21:13) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(round(varA**2(7)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(varA**2(7)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:21:30) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(round(varA**2(.7)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(varA**2(.7)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 07:21:54) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(varA**2)

-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:39:35) 
-- CODE:
varA=(float(input("digite o valor: ")))
print (round(varA**2).2)

-- ERROR:
File "XXXX", line 2
    print (round(varA**2).2)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:39:51) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(varA**2)

-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:41:57) 
-- CODE:
varA=(float(input("digite o valor: ")))
print (round(varA**2),7)

-- OUTPUT:
400 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:42:57) 
-- CODE:
varA=(float(input("digite o valor: ")))
print (round(varA**2), 7)

-- OUTPUT:
400 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:45:50) 
-- CODE:
varA=(float(input("digite o valor: ")))
print (round(varA**2), 7)
-- OUTPUT:
400 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:46:16) 
-- CODE:
varA=(float(input("digite o valor: ")))
print ((round(varA**2)(, 7))
-- ERROR:
File "XXXX", line 2
    print ((round(varA**2)(, 7))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:46:32) 
-- CODE:
varA=(float(input("digite o valor: ")))
print (round(varA**2)(, 7))
-- ERROR:
File "XXXX", line 2
    print (round(varA**2)(, 7))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:47:01) 
-- CODE:
varA=(float(input("digite o valor: ")))
print (round(varA**2)(, 7))
-- ERROR:
File "XXXX", line 2
    print (round(varA**2)(, 7))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:47:09) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(round(varA**2)(, 7))
-- ERROR:
File "XXXX", line 2
    print(round(varA**2)(, 7))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:48:16) 
-- CODE:
varA=(float(input("digite o valor: ")))
print((round(varA**2)),7)
-- OUTPUT:
400 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:50:22) 
-- CODE:
varA=(float(input("digite o valor: ")))
print((round(varA**2, 7)))
-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:50:37) 
-- CODE:
varA=(float(input("digite o valor: ")))
print((round(varA**2,7)))
-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:51:07) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(varA**2)
-- OUTPUT:
400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:51:38) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(varA**2)
print (round(varA, 7))
-- OUTPUT:
400.0
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:52:00) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(varA**2)
print (round(varA,7))
-- OUTPUT:
400.0
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:52:46) 
-- CODE:
varA=(float(input("digite o valor: ")))
print(varA**2)
print(round(varA,7))
-- OUTPUT:
400.0
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:54:30) 
-- CODE:
a=(float(input("digite o valor: ")))
print(a**2)
b=(float(input("digite o valor: ")))
print(b**2)
c=(float(input("digite o valor: ")))
print(c**2)

-- OUTPUT:
400.0
625.0
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:54:54) 
-- CODE:
a=(float(input("digite o valor de a: ")))
print(a**2)
b=(float(input("digite o valor de b: ")))
print(b**2)
c=(float(input("digite o valor de c: ")))
print(c**2)

-- OUTPUT:
400.0
625.0
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:55:47) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
print(a**2)
b2=(float(input("digite o valor de b2: ")))
print(b**2)
c2=(float(input("digite o valor de c2: ")))
print(c**2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:57:32) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
print(a**2)
b2=(float(input("digite o valor de b2: ")))
print(b**2)
c2=(float(input("digite o valor de c2: ")))
print(c**2)
print(round(a2+b2+c2, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:57:55) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
print(a2**2)
b2=(float(input("digite o valor de b2: ")))
print(b2**2)
c2=(float(input("digite o valor de c2: ")))
print(c2**2)
print(round(a2+b2+c2, 7))
-- OUTPUT:
400.0
625.0
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:59:04) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
print(a2**2)
b2=(float(input("digite o valor de b2: ")))
print(b2**2)
c2=(float(input("digite o valor de c2: ")))
print(c2**2)
print(round(a2+b2+c2)
-- ERROR:
File "XXXX", line 8
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:59:13) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
print(a2**2)
b2=(float(input("digite o valor de b2: ")))
print(b2**2)
c2=(float(input("digite o valor de c2: ")))
print(c2**2)
print(a2+b2+c2)
-- OUTPUT:
400.0
625.0
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:00:38) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
print(a2)
b2=(float(input("digite o valor de b2: ")))
print(b2)
c2=(float(input("digite o valor de c2: ")))
print(c2)
print((a2+b2+c2)**2)
-- OUTPUT:
20.0
25.0
30.0
5625.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:01:11) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
print((a2+b2+c2)**2)
-- OUTPUT:
5625.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:04:05) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
print((((a2**2)+(b2**2)+(c2**2))))
-- OUTPUT:
1925.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:07:46) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((((a2**2)+(b2**2)+(c2**2)/(a+b+c))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:08:52) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((((a2**2)+(b2**2)+(c2**2)/(a+b+c),7)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:09:37) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print(round((((a2**2)+(b2**2)+(c2**2)/(a+b+c),7))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:10:59) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print(round(((a2**2)+(b2**2)+(c2**2)/(a+b+c),7)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:12:02) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print(((a2**2)+(b2**2)+(c2**2)/(a+b+c)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:13:15) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((round(a2**2)+(b2**2)+(c2**2)/(a+b+c),7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:14:24) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((round((a2**2)+(b2**2)+(c2**2)/(a+b+c)),7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:16:15) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((round((a2**2)+(b2**2)+(c2**2)/(a+b+c)),7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:16:51) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print(round(((a2**2)+(b2**2)+(c2**2)/(a+b+c))),7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:17:36) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print(((round(a2**2)+(b2**2)+(c2**2)/(a+b+c),7)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:18:15) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print(round((((a2**2)+(b2**2)+(c2**2)/(a+b+c)))),7)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:18:35) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((((a2**2)+(b2**2)+(c2**2)/(a+b+c))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:22:58) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((((a2**2)+(b2**2)+(c2**2)//(a+b+c))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:25:25) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((((a2**2)+(b2**2)+(c2**2)/(a+b+c))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 07:27:24) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print((((a2**2)+(b2**2)+(c2**2)/(a+b+c))))

-- EXECUTION TIME:
0.170188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:33:23) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
print(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:34:31) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 07:34:46) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.138729
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 07:34:53) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.120577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 07:34:56) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.152575
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:35:07) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:35:48) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 07:35:54) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.125602
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:38:19) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:38:42) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 07:39:07) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 07:40:35) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.203367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:05:45) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.202929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:06:06) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((((((a2**2)+(b2**2)+(c2**2))/(a+b+c)))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.205908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:07:55) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:08:19) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:02:18) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:03:14) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((((a2**2)+(b2**2)+(c2**2))/(a+b+c))))
print(round(resultado, 7))

-- EXECUTION TIME:
0.178738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1800/main.py", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:31:11) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(a2**2+b2**2+c2**2/a+b+c)
print(round(resultado, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:32:26) 
-- CODE:
a2=(float(input("digite o valor de a2: ")))
b2=(float(input("digite o valor de b2: ")))
c2=(float(input("digite o valor de c2: ")))
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(a2**2+b2**2+c2**2/(a+b+c)
print(round(resultado, 7))

-- ERROR:
File "XXXX", line 8
    print(round(resultado, 7))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:33:44) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(a**2+b**2+c**2/(a+b+c)
print(round(resultado, 7))

-- ERROR:
File "XXXX", line 5
    print(round(resultado, 7))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:34:18) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((a**2+b**2+c**2/(a+b+c))
print(round(resultado, 7))

-- ERROR:
File "XXXX", line 5
    print(round(resultado, 7))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:35:31) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(a**2+b**2+c**2/a+b+c)
print(round(resultado, 7))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:36:45) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(a**2+b**2+c**2/(a+b+c)
print(round(resultado, 7))

-- ERROR:
File "XXXX", line 5
    print(round(resultado, 7))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:37:00) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((a**2+b**2+c**2/(a+b+c))
print(round(resultado, 7))

-- ERROR:
File "XXXX", line 5
    print(round(resultado, 7))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:38:02) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((a**2+b**2+c**2)/a+b+c)
print(round(resultado, 7))

-- OUTPUT:
151.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:39:26) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((a**2)+(b**2)+(c**2)/a+b+c)
print(round(resultado, 7))

-- OUTPUT:
1125.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:42:39) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((a**2)+(b**2)+(c**2)/a+b+c)
print(round(resultado, 7))

-- EXECUTION TIME:
0.18992
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1125.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
216496.2765957
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22622.0444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:42:58) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((a**2)+(b**2)+(c**2)/(a+b+c))
print(round(resultado, 7))

-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:43:21) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=((a**2)+(b**2)+(c**2)/(a+b+c))
print(round(resultado, 7))

-- EXECUTION TIME:
0.204922
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:44:50) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((a**2)+(b**2)+(c**2))/(a+b+c))
print(round(resultado, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:45:09) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((a**2)+(b**2)+(c**2))/(a+b+c))
print(round(resultado, 7))

-- EXECUTION TIME:
0.154164
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 06:21:28) 
-- CODE:
a=(float(input("digite o valor de a: ")))
b=(float(input("digite o valor de b: ")))
c=(float(input("digite o valor de c: ")))
resultado=(((a**2)+(b**2)+(c**2))/(a+b+c))
print(round(resultado, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
